# artifacts/api-server/src/lib/rbac.ts
@@ -57,7 +57,7 @@ export const columnPermissions: ColumnPermissions = {
     user: [],
     author: [],
     moderator: [],
-    admin: ["name", "description", "type", "format", "maxTeamSize", "startTime", "endTime", "inviteCode", "sponsorName", "sponsorLogoUrl", "sponsorUrl", "prize", "inviteRequirement"],
+    admin: ["name", "description", "type", "format", "maxTeamSize", "startTime", "endTime", "inviteCode", "sponsorName", "sponsorLogoUrl", "sponsorUrl", "prize", "inviteRequirement", "telegramUrl"],
   },
 };
 
